<resources>
    <string name="app_name">Light Test</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="settings">Set up</string>
    <string name="led_red">Red</string>
    <string name="led_green">Green</string>
    <string name="led_blue">Blue</string>
    <string name="light_range_tip">The brightness value is out of range (0 ~ 255)</string>
    <string name="light_crazy_mode">Light crazy mode:</string>
    <string name="light_crazy_mode_edit_tip">(> 0 seconds after walking, the light goes out, = 0 light keeps flashing)</string>
    <string name="light_flash_mode">Light flash mode:</string>
    <string name="light_flash_mode_edit_tip">(> = 1 in 0.1 seconds)</string>
    <string name="light_live_mode">Light live mode:</string>
    <string name="light_live_mode_edit_tip">(> = 2 in seconds)</string>
    <string name="light_keep_mode">Light keep mode:</string>
    <string name="light_keep_mode_edit_tip">(> 0 seconds after walking, the light is off, = 0 light is on all the time)</string>
    <string name="light_value_range">brightness value(0~255)</string>
    <string name="light_close_control">Light off control:</string>
    <string name="light_close_control_edit_tip">(select the light color you want to turn off, and you can turn it off together)</string>
    <string name="light_state_resume">Restore default state</string>
    <string name="light_state_current">Current lamp board status</string>
    <string name="help">Help manual</string>

    <string name="interval_ont">Two second</string>
    <string name="interval_two">Four seconds</string>
    <string name="interval_three">Six seconds</string>
    <string name="system_recovery">Restore factory settings</string>
    <string name="close_light">Turn off the lights</string>
    <string name="select_color">Please select the light color:</string>
    <string name="serial_desc">Step 1: select the serial port, and step 2: open it.</string>

</resources>

