<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@mipmap/bg_hp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_marginLeft="15dp"
        android:layout_marginTop="140dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        tools:context=".MainActivity">

        <TextView
            android:padding="5dp"
            android:textSize="22sp"
            android:layout_marginBottom="5dp"
            android:textColor="@android:color/holo_red_dark"
            android:text="@string/serial_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="820dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/light_dev"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="dev/ttyS0"
                android:textAllCaps="false"
                android:textSize="22sp"/>

            <Button
                android:layout_marginLeft="10dp"
                android:id="@+id/light_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="9600"
                android:textAllCaps="false"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/light_bt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/open"
                android:textAllCaps="false"
                android:textSize="22sp"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_alignParentLeft="true"
                android:layout_width="830dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--乱闪模式-->
                <LinearLayout
                    android:layout_marginTop="60dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/light_crazy_mode"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                    <Button
                        android:paddingBottom="3dp"
                        android:paddingTop="3dp"
                        android:textColor="#fff"
                        android:background="@drawable/bt_bg"
                        android:id="@+id/light_crazy_bt_open"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/open"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                    <Button
                        android:paddingBottom="3dp"
                        android:paddingTop="3dp"
                        android:textColor="#fff"
                        android:background="@drawable/bt_bg"
                        android:id="@+id/light_crazy_bt_closse"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/close"
                        android:textAllCaps="false"
                        android:textSize="22sp" />
                </LinearLayout>

                <!--呼吸灯模式-->
                <LinearLayout
                    android:layout_marginTop="55dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="160dp"
                        android:layout_height="wrap_content"
                        android:text="@string/light_live_mode"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                    <Button
                        android:paddingBottom="3dp"
                        android:paddingTop="3dp"
                        android:textColor="#fff"
                        android:background="@drawable/bt_bg"
                        android:id="@+id/light_live_one"
                        android:layout_width="wrap_content"
                        android:minWidth="180dp"
                        android:layout_height="wrap_content"
                        android:text="@string/interval_ont"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                    <Button
                        android:paddingBottom="3dp"
                        android:paddingTop="3dp"
                        android:textColor="#fff"
                        android:background="@drawable/bt_bg"
                        android:id="@+id/light_live_two"
                        android:layout_width="wrap_content"
                        android:minWidth="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/interval_two"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                    <Button
                        android:paddingBottom="3dp"
                        android:paddingTop="3dp"
                        android:textColor="#fff"
                        android:background="@drawable/bt_bg"
                        android:id="@+id/light_live_three"
                        android:layout_width="wrap_content"
                        android:minWidth="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/interval_three"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                    <Button
                        android:paddingBottom="3dp"
                        android:paddingTop="3dp"
                        android:textColor="#fff"
                        android:background="@drawable/bt_bg"
                        android:id="@+id/light_live_bt"
                        android:layout_width="wrap_content"
                        android:minWidth="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/close"
                        android:textAllCaps="false"
                        android:textSize="22sp" />
                </LinearLayout>

                <!--关闭灯光,恢复出厂设置-->
                <LinearLayout
                    android:layout_width="820dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:gravity="center"
                    android:orientation="horizontal">


                    <Button
                        android:id="@+id/light_all_close"
                        android:layout_width="wrap_content"
                        android:minWidth="220dp"
                        android:layout_height="wrap_content"
                        android:text="@string/close_light"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                    <Button
                        android:id="@+id/system_recovery"
                        android:layout_width="wrap_content"
                        android:minWidth="220dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:text="@string/system_recovery"
                        android:textAllCaps="false"
                        android:textSize="22sp" />

                </LinearLayout>


                <LinearLayout
                    android:visibility="gone"
                    android:layout_marginTop="45dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:id="@+id/red"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content" />
                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:layout_marginTop="10dp"
                        android:id="@+id/green"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content" />
                    <androidx.appcompat.widget.AppCompatSeekBar
                        android:layout_marginTop="10dp"
                        android:id="@+id/blue"
                        android:layout_width="500dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/red_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/green_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_marginTop="10dp"
                        android:id="@+id/blue_num"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll"
                android:layout_alignParentRight="true"
                android:layout_width="320dp"
                android:layout_height="500dp"
                android:orientation="vertical">

                <TextView
                    android:textColor="@android:color/black"
                    android:textSize="22sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_color" />

                <GridView
                    android:paddingLeft="15dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:id="@+id/gv_lattice"
                    android:layout_width="260dp"
                    android:layout_height="match_parent"
                    android:columnWidth="70dp"
                    android:horizontalSpacing="30dp"
                    android:numColumns="3"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="20dp"
                    android:visibility="visible" />
            </LinearLayout>

              <!--  <com.example.lightflashdemo.CustomGridView
                    android:id="@+id/custom_gv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:cacheColorHint="@android:color/white"
                    android:columnWidth="60dp"
                    android:gravity="center"
                    android:horizontalSpacing="20dp"
                    android:listSelector="@android:color/transparent"
                    android:numColumns="3"
                    android:scrollbars="none"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="10dp" />-->
        </RelativeLayout>
    </LinearLayout>
</ScrollView>